--- a/app/src/main/res/layout/activity_tilt_menu.xml
+++ b/app/src/main/res/layout/activity_tilt_menu.xml
@@ -19,46 +19,54 @@
         app:layout_constraintVertical_bias="0.032" />
 
     <ImageView
-        android:id="@+id/menuBall"
+        android:id="@+id/selectionCircle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:adjustViewBounds="false"
-        app:srcCompat="@mipmap/ic_launcher_round"
+        app:srcCompat="@drawable/circle_unselected"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/textTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="300px"
-        android:text="Top"
         android:layout_gravity="center_vertical"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="60dp"
+        android:text="Top"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#FFF"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/textCenter" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/selectionCircle" />
 
     <TextView
         android:id="@+id/textBottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300px"
-        android:text="Bottom"
         android:layout_gravity="center_vertical"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="60dp"
+        android:text="Bottom"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#FFF"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/selectionCircle"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textCenter"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
-    <TextView
-        android:id="@+id/textCenter"
+    <ImageView
+        android:id="@+id/menuBall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Center"
         android:layout_gravity="center_vertical"
         android:adjustViewBounds="false"
+        android:layout_marginStart="8px"
+        app:srcCompat="@drawable/ball"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
